minidecaf/generated/MiniDecafParser.py
# Generated from MiniDecaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniDecafParser ( Parser ):

    grammarFileName = "MiniDecaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'?'", "':'", "'int'", "'return'", "'if'", 
                     "'else'", "'for'", "'do'", "'while'", "'break'", "'continue'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'~'", "'&'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "'='", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "Int", "Return", 
                      "If", "Else", "For", "Do", "While", "Break", "Continue", 
                      "Lparen", "Rparen", "Lbrkt", "Rbrkt", "Lbrace", "Rbrace", 
                      "Comma", "Semicolon", "Punctuator", "Plus", "Minus", 
                      "Asterisk", "Slash", "Percent", "Exclamation", "Tilde", 
                      "Ampersand", "Langle", "Rangle", "Langle_eq", "Rangle_eq", 
                      "Double_eq", "Exclam_eq", "Equal", "Double_amp", "Double_bar", 
                      "Operator", "Integer", "Whitespace", "Ident" ]

    RULE_prog = 0
    RULE_globalDecl = 1
    RULE_function = 2
    RULE_parameterList = 3
    RULE_compoundStatement = 4
    RULE_mtype = 5
    RULE_blockItem = 6
    RULE_statement = 7
    RULE_declaration = 8
    RULE_expression = 9
    RULE_assignment = 10
    RULE_conditional = 11
    RULE_logical_or = 12
    RULE_logical_and = 13
    RULE_equality = 14
    RULE_eqOp = 15
    RULE_relational = 16
    RULE_relationOp = 17
    RULE_additive = 18
    RULE_addOp = 19
    RULE_multiplicative = 20
    RULE_mulOp = 21
    RULE_expressionList = 22
    RULE_unary = 23
    RULE_unaryOp = 24
    RULE_postfix = 25
    RULE_primary = 26

    ruleNames =  [ "prog", "globalDecl", "function", "parameterList", "compoundStatement", 
                   "mtype", "blockItem", "statement", "declaration", "expression", 
                   "assignment", "conditional", "logical_or", "logical_and", 
                   "equality", "eqOp", "relational", "relationOp", "additive", 
                   "addOp", "multiplicative", "mulOp", "expressionList", 
                   "unary", "unaryOp", "postfix", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    Int=3
    Return=4
    If=5
    Else=6
    For=7
    Do=8
    While=9
    Break=10
    Continue=11
    Lparen=12
    Rparen=13
    Lbrkt=14
    Rbrkt=15
    Lbrace=16
    Rbrace=17
    Comma=18
    Semicolon=19
    Punctuator=20
    Plus=21
    Minus=22
    Asterisk=23
    Slash=24
    Percent=25
    Exclamation=26
    Tilde=27
    Ampersand=28
    Langle=29
    Rangle=30
    Langle_eq=31
    Rangle_eq=32
    Double_eq=33
    Exclam_eq=34
    Equal=35
    Double_amp=36
    Double_bar=37
    Operator=38
    Integer=39
    Whitespace=40
    Ident=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniDecafParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.FunctionContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.FunctionContext,i)


        def globalDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.GlobalDeclContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.GlobalDeclContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = MiniDecafParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniDecafParser.Int:
                self.state = 56
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 55
                    self.globalDecl()
                    pass


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(MiniDecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclarationContext,0)


        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def getRuleIndex(self):
            return MiniDecafParser.RULE_globalDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDecl" ):
                listener.enterGlobalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDecl" ):
                listener.exitGlobalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDecl" ):
                return visitor.visitGlobalDecl(self)
            else:
                return visitor.visitChildren(self)




    def globalDecl(self):

        localctx = MiniDecafParser.GlobalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.declaration()
            self.state = 64
            self.match(MiniDecafParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mtype(self):
            return self.getTypedRuleContext(MiniDecafParser.MtypeContext,0)

        def Ident(self):
            return self.getToken(MiniDecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def parameterList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParameterListContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class FuncDefContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mtype(self):
            return self.getTypedRuleContext(MiniDecafParser.MtypeContext,0)

        def Ident(self):
            return self.getToken(MiniDecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def parameterList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParameterListContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def compoundStatement(self):
            return self.getTypedRuleContext(MiniDecafParser.CompoundStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = MiniDecafParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.FuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.mtype(0)
                self.state = 67
                self.match(MiniDecafParser.Ident)
                self.state = 68
                self.match(MiniDecafParser.Lparen)
                self.state = 69
                self.parameterList()
                self.state = 70
                self.match(MiniDecafParser.Rparen)
                self.state = 71
                self.compoundStatement()
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.mtype(0)
                self.state = 74
                self.match(MiniDecafParser.Ident)
                self.state = 75
                self.match(MiniDecafParser.Lparen)
                self.state = 76
                self.parameterList()
                self.state = 77
                self.match(MiniDecafParser.Rparen)
                self.state = 78
                self.match(MiniDecafParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.DeclarationContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MiniDecafParser.Comma)
            else:
                return self.getToken(MiniDecafParser.Comma, i)

        def getRuleIndex(self):
            return MiniDecafParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = MiniDecafParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniDecafParser.Int:
                self.state = 82
                self.declaration()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniDecafParser.Comma:
                    self.state = 83
                    self.match(MiniDecafParser.Comma)
                    self.state = 84
                    self.declaration()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lbrace(self):
            return self.getToken(MiniDecafParser.Lbrace, 0)

        def Rbrace(self):
            return self.getToken(MiniDecafParser.Rbrace, 0)

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.BlockItemContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = MiniDecafParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MiniDecafParser.Lbrace)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniDecafParser.Int) | (1 << MiniDecafParser.Return) | (1 << MiniDecafParser.If) | (1 << MiniDecafParser.For) | (1 << MiniDecafParser.Do) | (1 << MiniDecafParser.While) | (1 << MiniDecafParser.Break) | (1 << MiniDecafParser.Continue) | (1 << MiniDecafParser.Lparen) | (1 << MiniDecafParser.Lbrace) | (1 << MiniDecafParser.Semicolon) | (1 << MiniDecafParser.Minus) | (1 << MiniDecafParser.Asterisk) | (1 << MiniDecafParser.Exclamation) | (1 << MiniDecafParser.Tilde) | (1 << MiniDecafParser.Ampersand) | (1 << MiniDecafParser.Integer) | (1 << MiniDecafParser.Ident))) != 0):
                self.state = 93
                self.blockItem()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(MiniDecafParser.Rbrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_mtype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TypeIntContext(MtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.MtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Int(self):
            return self.getToken(MiniDecafParser.Int, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeInt" ):
                listener.enterTypeInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeInt" ):
                listener.exitTypeInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeInt" ):
                return visitor.visitTypeInt(self)
            else:
                return visitor.visitChildren(self)


    class TypePointerContext(MtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.MtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mtype(self):
            return self.getTypedRuleContext(MiniDecafParser.MtypeContext,0)

        def Asterisk(self):
            return self.getToken(MiniDecafParser.Asterisk, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypePointer" ):
                listener.enterTypePointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypePointer" ):
                listener.exitTypePointer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypePointer" ):
                return visitor.visitTypePointer(self)
            else:
                return visitor.visitChildren(self)



    def mtype(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniDecafParser.MtypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_mtype, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = MiniDecafParser.TypeIntContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 102
            self.match(MiniDecafParser.Int)
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniDecafParser.TypePointerContext(self, MiniDecafParser.MtypeContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mtype)
                    self.state = 104
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 105
                    self.match(MiniDecafParser.Asterisk) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MiniDecafParser.StatementContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclarationContext,0)


        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def getRuleIndex(self):
            return MiniDecafParser.RULE_blockItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItem" ):
                listener.enterBlockItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItem" ):
                listener.exitBlockItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItem" ):
                return visitor.visitBlockItem(self)
            else:
                return visitor.visitChildren(self)




    def blockItem(self):

        localctx = MiniDecafParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockItem)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniDecafParser.Return, MiniDecafParser.If, MiniDecafParser.For, MiniDecafParser.Do, MiniDecafParser.While, MiniDecafParser.Break, MiniDecafParser.Continue, MiniDecafParser.Lparen, MiniDecafParser.Lbrace, MiniDecafParser.Semicolon, MiniDecafParser.Minus, MiniDecafParser.Asterisk, MiniDecafParser.Exclamation, MiniDecafParser.Tilde, MiniDecafParser.Ampersand, MiniDecafParser.Integer, MiniDecafParser.Ident]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.statement()
                pass
            elif token in [MiniDecafParser.Int]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declaration()
                self.state = 113
                self.match(MiniDecafParser.Semicolon)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.pre = None # ExpressionContext
            self.cond = None # ExpressionContext
            self.post = None # ExpressionContext
            self.body = None # StatementContext
            self.copyFrom(ctx)

        def For(self):
            return self.getToken(MiniDecafParser.For, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(MiniDecafParser.Semicolon)
            else:
                return self.getToken(MiniDecafParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def statement(self):
            return self.getTypedRuleContext(MiniDecafParser.StatementContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def While(self):
            return self.getToken(MiniDecafParser.While, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def statement(self):
            return self.getTypedRuleContext(MiniDecafParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.ifBody = None # StatementContext
            self.elseBody = None # StatementContext
            self.copyFrom(ctx)

        def If(self):
            return self.getToken(MiniDecafParser.If, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.StatementContext,i)

        def Else(self):
            return self.getToken(MiniDecafParser.Else, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.pre = None # DeclarationContext
            self.cond = None # ExpressionContext
            self.post = None # ExpressionContext
            self.body = None # StatementContext
            self.copyFrom(ctx)

        def For(self):
            return self.getToken(MiniDecafParser.For, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(MiniDecafParser.Semicolon)
            else:
                return self.getToken(MiniDecafParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def declaration(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclarationContext,0)

        def statement(self):
            return self.getTypedRuleContext(MiniDecafParser.StatementContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDeclStmt" ):
                listener.enterForDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDeclStmt" ):
                listener.exitForDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDeclStmt" ):
                return visitor.visitForDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Do(self):
            return self.getToken(MiniDecafParser.Do, 0)
        def statement(self):
            return self.getTypedRuleContext(MiniDecafParser.StatementContext,0)

        def While(self):
            return self.getToken(MiniDecafParser.While, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniDecafParser.ExpressionContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStmt" ):
                listener.enterDoWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStmt" ):
                listener.exitDoWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStmt" ):
                return visitor.visitDoWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class CompoundStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compoundStatement(self):
            return self.getTypedRuleContext(MiniDecafParser.CompoundStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)
